--- a/index.html
+++ b/index.html
@@ -90,6 +90,120 @@
                 <td>1996-09-13</td>
                 <td>Kayes, Mali</td>
             </tr>
+
+            <tr>
+                <td>G</td>
+                <td>12</td>
+                <td>Harper, Jared</td>
+                <td>5ft 11in</td>
+                <td>175lbs</td>
+                <td>1997-09-14</td>
+                <td>Auburn, Alabama</td>
+            </tr>
+
+
+            <tr>
+                <td>G/F</td>
+                <td>10</td>
+                <td>Jerome, Ty</td>
+                <td>6ft 5in</td>
+                <td>195lbs</td>
+                <td>1997-07-08</td>
+                <td>New York City, New York</td>
+            </tr>
+
+            <tr>
+                <td>F</td>
+                <td>23</td>
+                <td>Johnson, Cameron</td>
+                <td>6ft 8in</td>
+                <td>210lbs</td>
+                <td>1996-03-03</td>
+                <td>Moon Township, Pennsylvania</td>
+            </tr>
+
+            <tr>
+                <td>G</td>
+                <td>16</td>
+                <td>Johnson, Tyler</td>
+                <td>6ft 3in</td>
+                <td>186lbs</td>
+                <td>1992-05-07</td>
+                <td>Grand Forks, North Dakota</td>
+            </tr>
+
+            <tr>
+                <td>F/C</td>
+                <td>8</td>
+                <td>Kaminsky, Frank</td>
+                <td>7ft 0in </td>
+                <td>240lbs</td>
+                <td>1993-04-04</td>
+                <td>Winfield, Illinois</td>
+            </tr>
+
+            <tr>
+                <td>G</td>
+                <td>0</td>
+                <td>Lecque, Jalen</td>
+                <td>6ft 4in</td>
+                <td>185lbs</td>
+                <td>2000-06-13</td>
+                <td>Manhattan, New York</td>
+            </tr>
+
+            <tr>
+                <td>G/F</td>
+                <td>2</td>
+                <td>Okobo, Elie</td>
+                <td>6ft 3in</td>
+                <td>190lbs</td>
+                <td>1997-10-23</td>
+                <td>Bordeaux, France</td>
+            </tr>
+
+            <tr>
+                <td>G/F</td>
+                <td>3</td>
+                <td>Oubre, Kelly</td>
+                <td>6ft 7in</td>
+                <td>203lbs</td>
+                <td>1995-12-09</td>
+                <td>New Orleans, Louisiana</td>
+            </tr>
+
+            <tr>
+                <td>F</td>
+                <td>41</td>
+                <td>Owens, Tariq</td>
+                <td>6ft 10in</td>
+                <td>205lbs</td>
+                <td>1995-06-30</td>
+                <td>Utica, New York</td>
+            </tr>
+
+
+            <tr>
+                <td>G</td>
+                <td>11</td>
+                <td>Rubio, Ricky</td>
+                <td>6ft 3in</td>
+                <td>190lbs</td>
+                <td>1990-10-21</td>
+                <td>El Masnou, Catalonia, Spain</td>
+            </tr>
+
+
+            <tr>
+                <td>F</td>
+                <td>20</td>
+                <td>Saric, Dario</td>
+                <td>6ft 10in</td>
+                <td>225lbs</td>
+                <td>1994-04-08</td>
+                <td>Šibenik, Croatia</td>
+            </tr>
+
         
         </table>
         <div id = "main">
