--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
     </head>
     <body>
+        
+        <p> The current roster consists of the following players: </p>
 
         <table style="width: 100%">
             <tr>
