--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <head>
         <link href="A1Style.css" rel="stylesheet" type="text/css">
         <h1>Phoenix Suns Sports Fanpage</h1>
+        <h3>by Sodienye Nkwonta</h3>
         <p>The Phoenix Suns are an American professional basketball team based in Phoenix, Arizona. The Suns compete in the National Basketball Association (NBA), as a member of the league's Western Conference Pacific Division, and are the only team in their division not based in California. The Suns play their home games at the Talking Stick Resort Arena. </p>
         
         <style>
