--- a/Page4.html
+++ b/Page4.html
@@ -23,8 +23,7 @@
             <p>The 1976 Phoenix Suns Team</p>
 
             <div class="item" > 
-            <iframe width="420" height="315" src="https://www.youtube.com/watch?v=hOSKAq9sZMs">
-            </iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/hOSKAq9sZMs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         
     </body>
